--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <div class="filme-principal">
+      <div class="container">
+        <h3 class="titulo">O RESGATE DO SOLDADO RYAN</h3>
+        <p class="descricao">Ao desembarcar na Normandia, no dia 6 de junho de 1944, capitão Miller (Tom Hanks) recebe a missão de comandar um grupo do segundo batalhão para o resgate do soldado James Ryan, caçula de quatro irmãos, dentre os quais três morreram em combate. Por ordens do chefe George C. Marshall, eles precisam procurar o soldado e garantir o seu retorno, com vida, para casa.</p>
+      </div>
+      <div class="botoes">
+        <button role="button" class="botao">
+          ASSISTIR AGORA
+        </button>
+        <button role="button" class="botao">
+          MAIS INFORMAÇÕES
+        </button>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
